--- a/phase-4-front-end/src/App.css
+++ b/phase-4-front-end/src/App.css
@@ -1,4 +1,94 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  
 }
 
+body {
+  
+  background-size: cover;
+ 
+  background-repeat: no-repeat;
+  height: 140vh;
+  background-image: url("https://cdn.wallpapersafari.com/34/21/kB0Doc.jpg");
+  
+}
+.nav {
+  color: white;
+  background-color: #333;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  padding: 0 1rem;
+
+}
+
+.nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+
+}
+.site-title {
+  font-size: 2rem;
+}
+.nav a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.nav li.active {
+  background-color: #555;
+
+}
+
+.nav li.hover {
+  background-color: bisque;
+}
+
+.property img { 
+
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 300px;
+}
+
+.property{
+ 
+  
+  justify-content: space-around;
+  margin: 2rem;
+  color: white;
+}
+
+.house {
+  text-align: center;
+  margin-top: 10%;
+}
+.house button{
+  border-radius: 100px;
+  padding: 30px;
+  border-style: solid ;
+  border-color: white;
+  color: black;
+  background: none;
+  border-width: 4px;
+  margin: 10%;
+  opacity: 0.5;
+  
+  
+  font-size: larger;
+}
+.house button span{
+  font-weight: bold;
+  
+}
+
+.house button:hover{
+  opacity: 1;
+}
