--- a/phase-4-front-end/src/App.css
+++ b/phase-4-front-end/src/App.css
@@ -75,7 +75,7 @@ body {
   padding: 30px;
   border-style: solid ;
   border-color: white;
-  color: black;
+  color: white;
   background: none;
   border-width: 4px;
   margin: 10%;
